--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,12 @@ body {
   margin: 0;
   color: #2e2d36;
   font-family:'Slabo 13px', serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #menu-buttons {
