--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@ body {
   background-color: #264159;
 }
 
-#top-bar button {
+button {
   margin: 1vh 1vw;
   height: 5vh;
   background-color: #3c96ba;
@@ -30,8 +30,15 @@ body {
 
 }
 
-#top-bar button:hover {
+button:hover {
   background-color: #5cb6da;
+}
+
+button#submit-out {
+  position: relative;
+  float:right;
+  margin: 0;
+  bottom: 7vh;
 }
 
 .id-field {
@@ -51,6 +58,7 @@ ul#students {
   text-align: center;
 }
 ul#students li {
+  position: relative;
   font-size: 3vmin;
   list-style-type: none;
   margin-right:auto;
